--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -11,6 +11,8 @@
             border: 2px dashed #ccc;
             display: inline-block;
             margin-right: 10px;
+            position: relative;
+            overflow: hidden;
         }
         .square {
             width: 100px;
@@ -20,37 +22,75 @@
             width: 400px;
             height: 200px;
         }
+        .square input[type="file"], .rectangle input[type="file"] {
+            position: absolute;
+            opacity: 0;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     </style>
+    <script>
+        function previewImage(event, id) {
+            var reader = new FileReader();
+            reader.onload = function(){
+                var output = document.getElementById(id);
+                output.src = reader.result;
+                output.style.display = 'block';
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        }
+    </script>
 </head>
 <body>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <div class="row">
             <div>Actor</div>
             {% for i in range(4) %}
-            <div class="square"><input type="file" name="actor{{ i }}"></div>
+            <div class="square">
+                <input type="file" name="actor{{ i }}" onchange="previewImage(event, 'actor{{ i }}')">
+                <img id="actor{{ i }}" style="display: none;">
+            </div>
             {% endfor %}
         </div>
         <div class="row">
             <div>NPC 1</div>
             {% for i in range(4) %}
-            <div class="square"><input type="file" name="npc1{{ i }}"></div>
+            <div class="square">
+                <input type="file" name="npc1{{ i }}" onchange="previewImage(event, 'npc1{{ i }}')">
+                <img id="npc1{{ i }}" style="display: none;">
+            </div>
             {% endfor %}
         </div>
         <div class="row">
             <div>NPC 2</div>
             {% for i in range(4) %}
-            <div class="square"><input type="file" name="npc2{{ i }}"></div>
+            <div class="square">
+                <input type="file" name="npc2{{ i }}" onchange="previewImage(event, 'npc2{{ i }}')">
+                <img id="npc2{{ i }}" style="display: none;">
+            </div>
             {% endfor %}
         </div>
         <div class="row">
             <div>NPC 3</div>
             {% for i in range(4) %}
-            <div class="square"><input type="file" name="npc3{{ i }}"></div>
+            <div class="square">
+                <input type="file" name="npc3{{ i }}" onchange="previewImage(event, 'npc3{{ i }}')">
+                <img id="npc3{{ i }}" style="display: none;">
+            </div>
             {% endfor %}
         </div>
         <div class="row">
             <div>Arena</div>
-            <div class="rectangle"><input type="file" name="arena"></div>
+            <div class="rectangle">
+                <input type="file" name="arena" onchange="previewImage(event, 'arena')">
+                <img id="arena" style="display: none;">
+            </div>
         </div>
         <button type="submit">Submit</button>
     </form>
